--- a/presentations/check_it_out/JohnDoeBinarySearch/pom.xml
+++ b/presentations/check_it_out/JohnDoeBinarySearch/pom.xml
@@ -38,5 +38,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.java.quickcheck</groupId>
+            <artifactId>quickcheck</artifactId>
+            <version>0.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
